# PhotoShepFPI

./: .gitignore  CMakeLists.txt
src/: Histogram.cpp  Histogram.hpp  Image.cpp  Image.hpp  InvalidHue.hpp  Kernel.cpp  Kernel.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
